Bug 83517 - add a setTranslation method. patch by alex.fritze@crocodile-clips.com, r=pavlov, sr=jst